# ACP-T

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
acpt/: README.md  __init__.py
acpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
acpt/adapters/: api_gateway_adapter.py  matlab_adapter.py  ns3_adapter.py  pytorch_adapter.py
acpt/agents/: __init__.py  base_agent.py  coordinator_agent.py  noma_agent.py  ris_agent.py  v2i_agent.py
acpt/agents/controller/: __init__.py  controller_agent.py
acpt/agents/llm_agent/: __init__.py  llm_reasoner.py
acpt/agents/reward/: __init__.py  reward_agent.py
acpt/config/: __init__.py  environment.yaml  runtime.yaml  wiring.yaml
acpt/config/blueprints/: README.md  noma_three_pair.yaml  (+2 more)
acpt/docs/: CEREBRAS_INTEGRATION.md  USAGE.md  architecture.md
acpt/environments/: __init__.py  backscatter_environment.py  base_env.py  multi_domain_environment.py  noma_environment.py  ris_environment.py  toy_nr_env.py  v2i_environment.py
acpt/examples/: __init__.py
acpt/knowledge/: __init__.py  kb_manager.py
acpt/scripts/: boot.py
acpt/specs/: agent_manifest_schema.json
acpt/tools/: __init__.py
acpt/utils/: __init__.py  config_loader.py  decision_utils.py  llm_cerebras.py  llm_client.py  logging_utils.py  metrics.py  registrar.py  serialization.py  visualization.py
config/: runtime.yaml
docs/: environment_recipes.md
examples/ris_simple_demo/: run.py
examples/ris_v2i_noma_case/: results.jsonl
scripts/: __init__.py  add_agent.py  add_kb_entry.py  add_tool.py
specs/: message_schema.json
(+54 files in other folders)
