[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acpt"
version = "0.1.0"
description = "ACP-T runtime stack with LLM-aware agents"
readme = "acpt/README.md"
requires-python = ">=3.9"
authors = [
  { name = "ACP-T Team" }
]
license = { text = "Proprietary" }
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.19",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["acpt*"]
